# code-partition

./: .clang-format  .gitignore  CMakeLists.txt  README.md
multi-client-server-1/: CMakeLists.txt  main.cpp  server-base.cpp  server-base.h  server.cpp  server.h
multi-client-server-2/: CMakeLists.txt  main.cpp  protocol.h  server-base.cpp  server-base.h  server.cpp  server.h
stdcpp-20-range/: CMakeLists.txt  main.cpp
